<resources>
    <string name="app_name">AplicacionSeguroAuto</string>
    <string name="string_ingresoPPU">Ingrese Patente (PPU)</string>
    <string name="hint_PPU">AA1000 ó BBBB10</string>
    <string name="hint_anio">2017</string>
    <string name="hint_valorUF">Ej: 26238</string>
    <string name="string_anioVehiculo"> Ingrese Año del Vehículo</string>
    <string name="string_valorUF">Ingrese Valor de la UF</string>
    <string name="string_valorUFUrl">El Valor de la UF es</string>
    <string name="Sbtn_calcular">Verificar Seguro</string>
    <string name="string_marcas">Seleccione marca Vehículo</string>
    <string name="string_modelo">Ingrese modelo del Vehículo</string>
    <string name="string_obligatorio">Datos Obligatorios (*) </string>
    <string name="string_obliga">(*)</string>
    <color name="noSeguro">#f00</color>

    <string-array name="array_Marcas">
        <item>Chevrolet</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Nissan</item>
    </string-array>

    <string-array name="array_Ford">
        <item>Fiesta</item>
        <item>Focus</item>
        <item>Fusion</item>
        <item>Mustang</item>
    </string-array>

    <string-array name="array_Chevy">
        <item>Camaro</item>
        <item>Corsa</item>
        <item>Sail</item>
        <item>Terrano</item>
    </string-array>

    <string-array name="array_Honda">
        <item>Accord</item>
        <item>Civic</item>
        <item>Civic Coupe</item>
        <item>Pilot</item>
    </string-array>

    <string-array name="array_Nissan">
        <item>Kicks</item>
        <item>Tiida</item>
        <item>Sentra</item>
        <item>Versa</item>
    </string-array>

</resources>
