<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.inacap.aplicacionseguroauto.MainActivity"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >



    <LinearLayout
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt_ingresoPPU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_ingresoPPU"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_obliga"
            android:layout_gravity="left"
            android:textColor="@android:color/holo_red_dark"
            />


    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/edt_ingresoPPU"
        android:hint="@string/hint_PPU"
        android:maxLength="6"
        android:inputType="textCapCharacters"
        android:backgroundTint="@android:color/holo_green_dark"
        android:digits="0,1,2,3,4,5,6,7,8,9,ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_seleccionMarca"
        android:text="@string/string_marcas"
        android:layout_gravity="left"
        android:paddingTop="20dp"
        />

    <Spinner
        android:id="@+id/spin_marcas"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:backgroundTint="@android:color/holo_green_dark">

    </Spinner>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_seleccionModelo"
        android:text="@string/string_modelo"
        android:layout_gravity="left"
        android:paddingTop="20dp"
        />

    <Spinner
        android:id="@+id/spin_modelos"
        android:layout_gravity="left"
        android:layout_width="160dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_height="wrap_content"

        >

    </Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left">


<LinearLayout
    android:layout_gravity="left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_anioVehiculo"
        android:layout_gravity="left"
        android:text="@string/string_anioVehiculo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_obliga"
        android:layout_gravity="left"
        android:textColor="@android:color/holo_red_dark"
        />

</LinearLayout>


    <EditText
        android:id="@+id/edt_anioVehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_anio"
        android:inputType="number"
        android:backgroundTint="@android:color/holo_green_dark"
        android:maxLength="4"
        android:layout_gravity="left"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="left"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >

    <LinearLayout
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_valorUF"
            android:text="@string/string_valorUF"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_obliga"
            android:layout_gravity="left"
            android:textColor="@android:color/holo_red_dark"
            />

    </LinearLayout>

        <EditText
            android:id="@+id/edt_valorUF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:backgroundTint="@android:color/holo_green_dark"
            android:hint="@string/hint_valorUF"
            android:inputType="number"
            android:maxLength="5" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_seguro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:text="@string/Sbtn_calcular"
        />

</LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_obligatorio"
        android:textColor="@android:color/holo_red_dark"
        android:layout_gravity="end"
        android:paddingTop="40dp"
        />




</LinearLayout>
